k8s/stock-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: stocks-node
spec:
  containers:
  - name: stocks-ic
    image: docker.io/abiraman123/mc-stock-service:v0.1
