k8s/company-deployment-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-node
  template:
    metadata:
      labels:
        app: company-node
    spec:
      containers:
      - name: company-ic
        image: docker.io/abiraman123/mc-company-service:v0.1
        resources:
          requests:
            memory: "386Mi"
            cpu: "256m"
          limits:
            memory: "512Mi"
            cpu: "512m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: company-service
spec:
  type: LoadBalancer 
  selector:
    app: company-node
  externalTrafficPolicy: Cluster
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
