k8s/company-deployment-np.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-node
  template:
    metadata:
      labels:
        app: company-node
    spec:
      containers:
      - name: company-ic
        image: docker.io/abiraman123/mc-company-service:v0.2
        resources:
          requests:
            memory: "256Mi"
            cpu: "96m"
          limits:
            memory: "384Mi"
            cpu: "128m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: company-service
spec:
  type: NodePort
  selector:
    app: company-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: http
