k8s/company-service.yml
apiVersion: v1
kind: Service
metadata:
  name: company-service
spec:
  type: NodePort
  selector:
    app: company-node
  ports:
    - port: 8081
      targetPort: 8081
