k8s/rds_service.yml
apiVersion: v1
kind: Service
metadata:
  name: aws-rds
spec:
  type: ExternalName
  externalName: stocks-rds.cpww3n4jiefr.us-east-2.rds.amazonaws.com
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
