k8s/stock-deployment-np.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service
spec:
  selector:
    matchLabels:
      app: stock-node
  template:
    metadata:
      labels:
        app: stock-node
    spec:
      containers:
      - name: stock-ic
        image: docker.io/abiraman123/mc-stock-service:v0.1
        resources:
          requests:
            memory: "256Mi"
            cpu: "96m"
          limits:
            memory: "384Mi"
            cpu: "128m"
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  type: NodePort 
  selector:
    app: stock-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
      name: http
